Changes to setup pipeline

--- a/src/azure-pipelines.yml
+++ b/src/azure-pipelines.yml
@@ -11,6 +11,7 @@ steps:
   displayName: 'Install Node.js'
 
 - script: |
+    export NODE_OPTIONS=--openssl-legacy-provider
     npm install
     npm run build
   displayName: 'npm install and build'
