--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "firebase": "^10.7.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^6.20.0",
-    "react-scripts": "^3.0.1"
+    "react-router-dom": "^6.20.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1",
+    "webpack": "^5.98.0"
   }
 }
