--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "firebase-admin": "^13.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.0.3",
+    "morgan": "^1.10.0"
   },
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
