Deploy test changes

--- a/src/server/package.json
+++ b/src/server/package.json
@@ -12,6 +12,7 @@
       "firebase-admin": "^13.2.0",
       "@azure/identity": "^4.8.0",
       "@azure/keyvault-secrets": "^4.9.0",
-      "@azure/keyvault-certificates": "^4.9.0"
+      "@azure/keyvault-certificates": "^4.9.0",
+      "@azure/keyvault-keys": "^4.9.0"
     }
   }
